@@ -4,8 +4,8 @@ jEdit 4.5 version history
 
 {{{ Version 4.5pre1
 
-Thanks to Matthieu Casanova, Bad Sector, jclopes, Dale Anson, kog13 and Matthew Gilbert for contributing to this
-release
+Thanks to Matthieu Casanova, cy6erGn0m, Bad Sector, jclopes, Dale Anson, kog13 and Matthew Gilbert for contributing to
+this release
 
 {{{ API Changes
 -New method TextArea.getVisibleLineText(screenLine) and
@@ -27,6 +27,8 @@ release
 {{{ Miscellaneous
 -Added a new menu item "New Macro" in Macros menu (patch #2983607 from kog13, Matthieu Casanova)
 
+-In search and replace when replacing by a beanshell snippet, it is now possible to use multiple statements instead of
+ only one statement. To do that, enclose your code in braces (patch #3002207 from cy6erGn0m, Matthieu Casanova)
 }}}
 }}}
 
